feat: Phase 13 GREEN - Entity Merging Functions (complete)
Implements comprehensive entity merging functionality for combining multiple
partial entity records from sanctions lists into consolidated entities.

IMPLEMENTATION (504 lines):
- EntityMerger.merge(): Groups entities by source/sourceId/type, merges each group
- EntityMerger.getMergeKey(): Generates merge key (source/sourceId/type lowercase)
- EntityMerger.mergeTwo(): Core merge logic using first-non-null strategy
- mergeStrings(): Case-insensitive string list deduplication
- mergeGovernmentIds(): Dedupe by type+country+identifier
- mergeAddresses(): Dedupe by line1+line2, fills missing fields
- mergeCryptoAddresses(): Dedupe by currency+address
- firstNonNull(): Scalar field selection (filters null and empty strings)
- uniqueBy(), uniqueByWithMerge(): Generic deduplication utilities

ENTITY MERGING STRATEGY:
- Scalars: First non-null/non-empty wins (firstNonNull)
- Collections: Case-insensitive deduplication via LinkedHashMap
- Type-specific: Person/Business/Organization/Aircraft/Vessel merged separately
- ContactInfo: First-non-null for each singular field (not lists like Go)
- Addresses: Deduplicate by line1/line2, merge to fill missing fields
- Final step: Normalize merged entities

TESTS (36 tests, 956 lines):
- 7 top-level merge tests (grouping, normalization, edge cases)
- 2 merge key generation tests
- 8 two-entity merge tests (all entity types)
- 4 mergeStrings tests
- 3 mergeGovernmentIds tests
- 3 mergeAddresses tests
- 2 mergeCryptoAddresses tests
- 4 ContactInfo merging tests
- 3 real-world scenarios (EU CSL multi-row, OFAC addresses, vessel partial data)

REAL-WORLD USE CASE:
EU CSL/UK CSL represent single entities across multiple CSV rows:
- Row 1: Name + Gender
- Row 2-3: Alternate names
- Row 4: Birth date + place
- Row 5: Address
Merging combines these into single consolidated entity for correct matching.

JAVA vs GO MODEL DIFFERENCES:
- ContactInfo: Java uses singular String fields (emailA